--- a/styles/card.css
+++ b/styles/card.css
@@ -1,9 +1,12 @@
         /* Estilos para el contenedor principal */
         .card-container {
             display: flex;
-            justify-content: space-between; /* Espacio entre las tarjetas */
-            flex-wrap: wrap; /* Permite que las tarjetas se ajusten si no hay espacio */
-            gap: 20px; /* Espacio entre las tarjetas */
+            justify-content: space-between;
+            /* Espacio entre las tarjetas */
+            flex-wrap: wrap;
+            /* Permite que las tarjetas se ajusten si no hay espacio */
+            gap: 20px;
+            /* Espacio entre las tarjetas */
             padding: 20px;
         }
 
@@ -14,7 +17,8 @@
             border-radius: 8px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             text-align: center;
-            flex: 1 1 calc(33.333% - 40px); /* Ajusta la anchura de las tarjetas */
+            flex: 1 1 calc(33.333% - 40px);
+            /* Ajusta la anchura de las tarjetas */
             max-width: calc(33.333% - 40px);
             box-sizing: border-box;
         }
